
180111 Martin Raden :
 * IntaRNA/Accessibility:
   + decomposeByMinPu() : decomposes a given list of ranges to subranges by
     excluding all positions that have an unpaired probability below a given
     threshold
 * bin/CommandLineParsing :
   + '--outMinPu' argument + validators
   * get*Ranges() :
     + calling Accessibility->decomposeByMinPu() for each range list
     + energy argument (needed for RT access)

171216 Martin Raden :
 * bin/CommandLineParsing :
   - check for equal length of sequence and constraint removed since obsolete

171214 Martin Raden :
 * m4:
   * *.m4 : updated to recent versions
   + m4-ax_boost_*.m4 : boost library checks 

171213 Martin Raden :
 * configure.ac :
   * leading spaces in macros removed
   + default macro definitions if pkg.m4 not available
   + silent make output enabled per default (full output with 'make V=1')
   - obsolete pkg-config m4 check removed

171211 Martin Raden :
 * IntaRNA/PredictorMfe :
   * traceBack() : 
     + argument outConstraint (needed to bugfix the PredictorMfe2d computation)
   * reportOptima() :
     + forwards outConstraint to traceBack() call
 * IntaRNA/PredictorMfe* :
   * adaption to traceBack() interface changes
 * IntaRNA/PredictorMfe2d :
   * traceBack() :
     * bugfix: outConstraint missing in fillHybridE() call but called with 
       (&outConstraint = i1) and (i1 = i2), which caused infinite tracebacks
   * initHybridE() :
     - default argument values (=0) removed to avoid wrong argument use (see
       traceBack() bugfix)
     - special initialization removed to simplify code (and not applied anyway)
   * fillHybridE() :
     - default argument values (=0) removed to avoid wrong argument use (see
       traceBack() bugfix)
     * computation simplified
 * IntaRNA/PredictorMfe2d :
   * fillHybridE() :
     * bugfix: outConstraint missing in fillHybridE() call but called with 
       (&outConstraint = i1) and (i1 = i2), which caused infinite tracebacks